syntax = "proto3";
// package内容格式推荐为trpc.{app}.{server}，以trpc为固定前缀，标识这是一个trpc服务协议，app为你的应用名，server为你的服务进程名
package trpc.bazi.paipan;


//{"太初历", "四分历", "大明历", "戊寅元历", "麟德历", "正元历", "应天历", "崇天历", "淳祐历", "授时历"}
enum Calendar {
    Calendar_Unknown       = 0;   //未知历法
    Calendar_TaiChu        = 1;   //太初历
    Calendar_ShiFen        = 2;   //四分历
    Calendar_DaMing        = 3;   //祖冲之大明历
    Calendar_WuYinYuan     = 4;   //戊寅元历
    Calendar_LinDe         = 5;   //麟德历
    Calendar_ZhengYuan     = 6;   //正元历
    Calendar_YingTian      = 7;   //应天历
    Calendar_ChongTian     = 8;   //崇天历
    Calendar_ChunYou       = 9;   //淳祐历
    Calendar_ShouShi       = 10;  //郭守敬授时历
    Calendar_LunarDingQi   = 11;  //现代农历-定气法
    Calendar_YouZiPingDong = 12;  //尤武伟子平历-定冬至
    Calendar_YouZiPingXia  = 13;  //尤武伟子平历-定夏至
}


enum CalendarType {
    CalendarType_Unknown   = 0;
    CalendarType_Gregorian = 1;  //公历
    CalendarType_Lunar     = 2;  //农历
    CalendarType_Julian    = 3;  //儒略历
    CalendarType_Hejra     = 4;  //回历
}
// 请求参数
// --birthday(生日),sex(性别),AST(太阳时 apparent solar time)
// --lon(出生地经度：longitude),lifa(历法 calendar )

message GeoCoordinate
{
    float  latitude  = 1;	//  纬度
    float  longitude = 2;// 经度
    string province  = 3; // 省市
    string county    = 4; // 区县
};

message BirthDayTime
{
    int32 year         = 1;
    int32 month        = 2;
    int32 day          = 3;
    int32 hour         = 4;
    int32 minute       = 5;
    int32 second       = 6;
};

message BaziPaiPanRequest {
    string name        = 1;   //姓名
    bool gender        = 2;   //性别
    bool astFlag       = 3;   //是否真太阳时
    GeoCoordinate location    = 4;  //经纬度地区
    int32 calendar     = 5;  //历法
    int32 calendarType = 6;  //历法类型
    BirthDayTime birthday = 7; //出生时间
    bool isLeapMonth   = 8;   //是否农历闰年
    bool isSpecLunarc    = 9;  //是否特殊的下一月份
}

message BaziSiZhu {
    repeated string shishen  = 1;
    repeated string tiangan  = 2;
    repeated string dizhi    = 3;
    repeated string canggan1 = 4;
    repeated string canggan2 = 5;
    repeated string canggan3 = 6;
}

// 响应参数
message BaziPaiPanReply {
    string nonce                 = 1;   //标记
    string timestamp             = 2;   //时间戳
    string userName              = 3;   //姓名
    string gender                = 4;   //性别
    string shengxiao             = 5;   //生肖
    string age                   = 6;   //年龄
    string solarBirth            = 7;   //公历生日或儒略历生日
    string lunarBirth            = 8;   //农历生日
    string dateOfBirth           = 9;   //出生年代
    string dingQiType            = 10;  //定气方式
    string jieQi                 = 11;  //节气
    BaziSiZhu bazi               = 12;  //八字盘面信息
    string qiYun                 = 13;  //起运
    string jiaoYun               = 14;  //交运
    repeated string daYun        = 15;  //大运
    repeated int32 startYear     = 16;  //起于
    repeated string fleetingYear = 17;  //流年
    repeated int32 endYear       = 18;  //止于
}


// 定义服务接口
service BaziPaipan {
    rpc GetBaziPaipan(BaziPaiPanRequest) returns (BaziPaiPanReply) {}
}

